--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 future==0.14.3
 nose==1.3.6
 requests==2.7.0
--e https://github.com/Mri-monitoring/Mri-python-client.git#egg=mri-master
+-e git+https://github.com/Mri-monitoring/Mri-python-client.git#egg=mri-master
