--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 future==0.14.3
+matplotlib==1.4.3
 nose==1.3.6
+numpy==1.9.2
+pyparsing==2.0.3
+python-dateutil==2.4.2
+pytz==2015.2
 requests==2.7.0
+six==1.9.0
 -e git+https://github.com/Mri-monitoring/Mri-python-client.git#egg=mri-master
